Addressed the deprecated constructor Integer(int).